backend/kubernetes/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resq-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: resq-api-service
spec:
  rules:
  - host: api.resq-ai.pk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: resq-api-service
            port:
              number: 80
